--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -58,6 +58,9 @@
 					<iframe id="ytplayer" type="text/html" width="640" height="360"
 						src="{{fieldEntity['trailer'].url}}"
 						frameborder="0"/>
+					<script>
+						console.log('FE', $scope.fieldEntity);
+					</script>
 				</div>
 
 				<!-- boutons partager / devenir volontaire etc. -->
