--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -55,7 +55,7 @@
 
 				<div ng-if="contentDetailCtrl.watch =='trailer'">
 					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
-					<iframe id="ytplayer" type="text/html" width="640" height="360"
+					<iframe id="ytplayer" type="text/html" 
 						ng-src="{{fieldEntity['trailer'].embed_url}}"
 						frameborder="0"/>
 				</div>
