--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -55,9 +55,11 @@
 
 				<div ng-if="contentDetailCtrl.watch =='trailer'">
 					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
-					<iframe id="ytplayer" type="text/html" 
-						ng-src="{{fieldEntity['trailer'].embed_url}}"
-						frameborder="0"/>
+					<div style="position:relative;width:100%;height:0">
+						<iframe id="ytplayer" type="text/html" 
+							ng-src="{{fieldEntity['trailer'].embed_url}}"
+							frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" >
+					</div>
 				</div>
 
 				<!-- boutons partager / devenir volontaire etc. -->
