--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -55,7 +55,7 @@
 
 				<div ng-if="contentDetailCtrl.watch =='trailer'">
 					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
-					<div style="position:relative;width:100%;height:0">
+					<div style="position:relative;width:100%;padding-bottom:56.25%;height:0">
 						<iframe id="ytplayer" type="text/html" 
 							ng-src="{{fieldEntity['trailer'].embed_url}}"
 							frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" >
