--- a/theme/cte/css/cte.css
+++ b/theme/cte/css/cte.css
@@ -486,64 +486,64 @@ span.font_icon:hover a {
   border-color: #898989;
 }
 .mt-1 {
-  margin-top: 1em;
+  margin-top: 1em !important;
 }
 .mb-1 {
-  margin-bottom: 1em;
+  margin-bottom: 1em !important;
 }
 .mt-n1 {
-  margin-top: -1em;
+  margin-top: -1em !important;
 }
 .mb-n1 {
-  margin-bottom: -1em;
+  margin-bottom: -1em !important;
 }
 .mt-2 {
-  margin-top: 2em;
+  margin-top: 2em !important;
 }
 .mb-2 {
-  margin-bottom: 2em;
+  margin-bottom: 2em !important;
 }
 .mt-n2 {
-  margin-top: -2em;
+  margin-top: -2em !important;
 }
 .mb-n2 {
-  margin-bottom: -2em;
+  margin-bottom: -2em !important;
 }
 .mt-3 {
-  margin-top: 3em;
+  margin-top: 3em !important;
 }
 .mb-3 {
-  margin-bottom: 3em;
+  margin-bottom: 3em !important;
 }
 .mt-n3 {
-  margin-top: -3em;
+  margin-top: -3em !important;
 }
 .mb-n3 {
-  margin-bottom: -3em;
+  margin-bottom: -3em !important;
 }
 .mt-4 {
-  margin-top: 4em;
+  margin-top: 4em !important;
 }
 .mb-4 {
-  margin-bottom: 4em;
+  margin-bottom: 4em !important;
 }
 .mt-n4 {
-  margin-top: -4em;
+  margin-top: -4em !important;
 }
 .mb-n4 {
-  margin-bottom: -4em;
+  margin-bottom: -4em !important;
 }
 .mt-5 {
-  margin-top: 5em;
+  margin-top: 5em !important;
 }
 .mb-5 {
-  margin-bottom: 5em;
+  margin-bottom: 5em !important;
 }
 .mt-n5 {
-  margin-top: -5em;
+  margin-top: -5em !important;
 }
 .mb-n5 {
-  margin-bottom: -5em;
+  margin-bottom: -5em !important;
 }
 .header {
   margin: 15px 0;
