--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="/theme/netforgod/js/jwplayer7.js"></script>
+<!-- <script type="text/javascript" src="/theme/netforgod/js/jwplayer7.js"></script> -->
 
 <div class="bg-degrade">
 	<div class="container">
@@ -48,6 +48,11 @@
 								</div>
 							</div>
 							<jwplayer video-url="{{fieldEntity[contentDetailCtrl.lang].url}}" title="{{contentDetailCtrl.content.text + '_'+contentDetailCtrl.lang}}"  sous-titre="{{contentDetailCtrl.film_subs}}"></jwplayer>
+							<!-- <div style="position:relative;width:100%;padding-bottom:56.25%;height:0">
+								<iframe id="ytplayer" type="text/html" 
+									ng-src="{{fieldEntity['trailer'].embed_url}}"
+									frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" >
+							</div> -->
 						</div>
 					</div>
 		
