--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -41,7 +41,11 @@
                     <div ng-switch-when="56094a2245205e0e2541ea77">
                     
                         <div class="media-body">
-                            <jwplayer video-url="{{content.fields.video.url}}"></jwplayer>
+                            <!-- <jwplayer video-url="{{content.fields.video.url}}"></jwplayer> -->
+                            <iframe type="text/html" 
+                                ng-src="{{content.fields.video.url}}"
+                                frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" >
+
                             <a ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}">
                                 <h4 class="list-item-title capital"><span>
                                         {{content.fields.text}}
