--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -43,7 +43,7 @@
                         <div class="media-body">
                             <!-- <jwplayer video-url="{{content.fields.video.url}}"></jwplayer> -->
                             <iframe type="text/html" 
-                                ng-src="{{content.fields.video.url}}"
+                                ng-src="{{get_youtube_embed_url(content.fields.video.url)}}"
                                 frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" >
 
                             <a ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}">
