--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -42,9 +42,11 @@
                     
                         <div class="media-body">
                             <!-- <jwplayer video-url="{{content.fields.video.url}}"></jwplayer> -->
-                            <iframe type="text/html" 
-                                ng-src="{{get_youtube_embed_url(content.fields.video.url)}}"
-                                frameborder="0"  > <!-- style="position:absolute;top:0;left:0;width:100%;height:100%;" -->
+                            <div style="position:relative;width:100%;padding-bottom:56.25%;height:0"></div>
+                                <iframe type="text/html" 
+                                    ng-src="{{get_youtube_embed_url(content.fields.video.url)}}"
+                                    frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" > 
+                            </div>
 
                             <a ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}">
                                 <h4 class="list-item-title capital"><span>
