--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -42,10 +42,14 @@
                     
                         <div class="media-body">
                             <!-- <jwplayer video-url="{{content.fields.video.url}}"></jwplayer> -->
-                            <div style="position:relative;width:100%;padding-bottom:56.25%;height:0"></div>
+                            <!-- <div style="position:relative;width:100%;padding-bottom:56.25%;height:0"></div>
                                 <iframe type="text/html" 
                                     ng-src="{{get_youtube_embed_url(content.fields.video.url)}}"
                                     frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" > 
+                            </div> -->
+                            <div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
+                                <iframe height="360" ng-src="{{get_youtube_embed_url(content.fields.video.url)}}" style="width:100%;height:100%;" width="640">
+                                </iframe>
                             </div>
 
                             <a ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}">
