--- a/theme/cte/templates/blocks/contentDetail/actualites.html
+++ b/theme/cte/templates/blocks/contentDetail/actualites.html
@@ -215,7 +215,11 @@
 		</div>
 		<div class="col-xs-12 " ng-if="fieldEntity['video']">
 			<div class="text-article">
-				<jwplayer video-url="{{fieldEntity['video']}}"></jwplayer>
+				<!-- <jwplayer video-url="{{fieldEntity['video']}}"></jwplayer> -->
+				<div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
+					<iframe height="360" ng-src="{{get_youtube_embed_url(fieldEntity['video'])}}" style="width:100%;height:100%;" width="640">
+					</iframe>
+				</div>
 			</div>
 		</div>
 		<div class="col-xs-12">
