--- a/theme/cte/templates/blocks/contentDetail/video.html
+++ b/theme/cte/templates/blocks/contentDetail/video.html
@@ -45,7 +45,11 @@
 		</div>
 		<div class="col-xs-12 " ng-if="fieldEntity['video']">
 			<div class="text-article">
-				<jwplayer video-url="{{contentDetailCtrl.content.fields.video.url}}"></jwplayer>
+				<!-- <jwplayer video-url="{{contentDetailCtrl.content.fields.video.url}}"></jwplayer> -->
+				<div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
+					<iframe height="360" ng-src="{{get_youtube_embed_url(contentDetailCtrl.content.fields.video.url)}}" style="width:100%;height:100%;" width="640">
+					</iframe>
+				</div>
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-12 padding-large" ng-if="fieldEntity['description']">
