--- a/theme/cte/templates/blocks/contentList/actus_fr.html
+++ b/theme/cte/templates/blocks/contentList/actus_fr.html
@@ -81,7 +81,11 @@
                                 <p class="capital">{{content.createTime * 1000 | date}} </p>
                             </div>
                             <div class="col-sm-8">
-                                <jwplayer video-url="{{content.fields.video}}"></jwplayer>
+                                <!-- <jwplayer video-url="{{content.fields.video}}"></jwplayer> -->
+                                <div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
+                                    <iframe height="360" ng-src="{{get_youtube_embed_url(content.fields.video)}}" style="width:100%;height:100%;" width="640">
+                                    </iframe>
+                                </div>
                             </div>
                         </div>
                         <a ng-if="!fieldEditMode&&contentListCtrl.isFOContributeMode" ng-href="{{ contentListCtrl.editorPageUrl+'?content-edit='+content.id }}" title="éditer un contenu" class="btn btn-default ng-binding ng-scope">
