--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -65,7 +65,7 @@
 							ng-src="{{fieldEntity['trailer'].embed_url}}"
 							frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" >
 					</div> -->
-					<youtube width="640" height="390" videoid="M7lc1UVf-VE"></youtube>
+					<youtube videoid="{{fieldEntity['trailer'].id}}"></youtube>
 				</div>
 
 				<!-- boutons partager / devenir volontaire etc. -->
