--- a/theme/cte/templates/blocks/contentList/actus.html
+++ b/theme/cte/templates/blocks/contentList/actus.html
@@ -80,7 +80,7 @@
                             <div class="col-sm-8">
                                 <!-- <jwplayer video-url="{{content.fields.video}}"></jwplayer> -->
                                 <div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
-                                    <iframe height="360" ng-src="{{get_youtube_embed_url(content.fields.video)}}" style="width:100%;height:100%;" width="640">
+                                    <iframe height="360" ng-src="{{get_youtube_embed_url(content.fields.video)}}" style="width:100%;height:100%;">
                                     </iframe>
                                 </div>
                             </div>
