--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -48,7 +48,7 @@
 								</div>
 							</div>
 							<!-- <jwplayer video-url="{{fieldEntity[contentDetailCtrl.lang].url}}" title="{{contentDetailCtrl.content.text + '_'+contentDetailCtrl.lang}}"  sous-titre="{{contentDetailCtrl.film_subs}}"></jwplayer> -->
-							<youtube videoid="{{get_youtube_embed_url(fieldEntity[contentDetailCtrl.lang].url)}}"></youtube>
+							<youtube video="{{fieldEntity[contentDetailCtrl.lang].url}}"></youtube>
 						</div>
 					</div>
 		
@@ -56,12 +56,7 @@
 
 				<div ng-if="contentDetailCtrl.watch =='trailer'">
 					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
-					<!-- <div style="position:relative;width:100%;padding-bottom:56.25%;height:0">
-						<iframe id="ytplayer" type="text/html" 
-							ng-src="{{fieldEntity['trailer'].embed_url}}"
-							frameborder="0" style="position:absolute;top:0;left:0;width:100%;height:100%;" >
-					</div> -->
-					<youtube videoid="{{fieldEntity['trailer'].id}}"></youtube>
+					<youtube video="{{fieldEntity['trailer'].id}}"></youtube>
 				</div>
 
 				<!-- boutons partager / devenir volontaire etc. -->
