--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -56,7 +56,7 @@
 
 				<div ng-if="contentDetailCtrl.watch =='trailer'">
 					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
-					<!-- <youtube video="{{fieldEntity['trailer'].id}}"></youtube> -->
+					<youtube video="{{fieldEntity['trailer'].id}}"></youtube>
 				</div>
 
 				<!-- boutons partager / devenir volontaire etc. -->
