--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -34,7 +34,7 @@
 				</div>
 
 				<!-- fenêtre principale de la vidéo -->
-				<div ng-if="contentDetailCtrl.watch == 'film'">
+				<div ng-hide="contentDetailCtrl.watch != 'film'">
 					<div  ng-init = "field = contentDetailCtrl.getFieldByName('filmYT')">
 						<div ng-controller="RECFieldFilmController as recCtrl" >
 							<div class="dropdown pull-right lang-selection">
@@ -54,7 +54,7 @@
 		
 				</div>
 
-				<div ng-if="contentDetailCtrl.watch == 'trailer'">
+				<div ng-hide="contentDetailCtrl.watch != 'trailer'">
 					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
 					<youtube video="{{fieldEntity['trailer'].id}}"></youtube>
 				</div>
