--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -33,8 +33,8 @@
 						<span ng-if="fieldEntity['trailer'] && fieldEntity['trailer'].url!='' " ng-class="{'active':contentDetailCtrl.watch =='trailer' }" ng-click="contentDetailCtrl.watch = 'trailer' ">trailer</span></p>
 				</div>
 
-				<!-- fenêtre principale de la vidéo -->
-				<div ng-hide="contentDetailCtrl.watch != 'film'">
+				<!-- fenêtre principale de la vidéo film -->
+				<div ng-if="contentDetailCtrl.watch == 'film'">
 					<div  ng-init = "field = contentDetailCtrl.getFieldByName('filmYT')">
 						<div ng-controller="RECFieldFilmController as recCtrl" >
 							<div class="dropdown pull-right lang-selection">
@@ -54,7 +54,8 @@
 		
 				</div>
 
-				<div ng-hide="contentDetailCtrl.watch != 'trailer'">
+				<!-- fenêtre principale de la vidéo trailer -->
+				<div ng-if="contentDetailCtrl.watch == 'trailer'">
 					<!-- <jwplayer video-url="{{fieldEntity['trailer'].url}}"  title="{{contentDetailCtrl.content.text + '_trailer'}}" sous-titre="{{contentDetailCtrl.subs_trailer}}"></jwplayer> -->
 					<youtube video="{{fieldEntity['trailer'].id}}"></youtube>
 				</div>
