--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -29,8 +29,8 @@
 
 				<!-- boutons regarder film / trailer -->
 				<div class="film-controls" >
-					<p><span class="hidden-xxs">{{rubedo.translate('NFG.Watch','Watch')}}</span><span ng-if="fieldEntity['filmYT']"  ng-class="{'active':contentDetailCtrl.watch =='film' }" ng-click="contentDetailCtrl.watch_video('film')">film </span>
-						<span ng-if="fieldEntity['trailer'] && fieldEntity['trailer'].url!='' " ng-class="{'active':contentDetailCtrl.watch =='trailer' }" ng-click="contentDetailCtrl.watch_video('trailer')">trailer</span></p>
+					<p><span class="hidden-xxs">{{rubedo.translate('NFG.Watch','Watch')}}</span><span ng-if="fieldEntity['filmYT']"  ng-class="{'active':contentDetailCtrl.watch =='film' }" ng-click="contentDetailCtrl.watch =='film'">film </span>
+						<span ng-if="fieldEntity['trailer'] && fieldEntity['trailer'].url!='' " ng-class="{'active':contentDetailCtrl.watch =='trailer' }" ng-click="contentDetailCtrl.watch =='trailer'">trailer</span></p>
 				</div>
 
 				<!-- fenêtre principale de la vidéo film -->
