--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -46,7 +46,7 @@
                                 <iframe height="360" ng-src="{{get_youtube_embed_url(content.fields.video.url)}}" style="width:100%;height:100%;" width="640">
                                 </iframe>
                             </div> -->
-                            <youtube video="{{get_youtube_embed_url(content.fields.video.url)}}"></youtube>
+                            <youtube video="{{content.fields.video.url}}"></youtube>
 
                             <a ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}">
                                 <h4 class="list-item-title capital"><span>
