--- a/theme/goodnews/templates/blocks/contentDetail/actualites.html
+++ b/theme/goodnews/templates/blocks/contentDetail/actualites.html
@@ -35,7 +35,8 @@
 			</div>
 			<div class="col-xs-12 " ng-if="fieldEntity['video']">
 				<div class="text-article">
-					<jwplayer video-url="{{fieldEntity['video']}}"></jwplayer>
+					<!-- <jwplayer video-url="{{fieldEntity['video']}}"></jwplayer> -->
+					<youtube video="{{fieldEntity['video']}}"></youtube>
 				</div>
 			</div>
 			<div class="col-xs-12">
