--- a/theme/wtp15/templates/blocks/contentDetail/pageWTP.html
+++ b/theme/wtp15/templates/blocks/contentDetail/pageWTP.html
@@ -24,7 +24,8 @@
             <rubedo-field field= "{{contentDetailCtrl.getFieldByName('textOnBg')}}" ng-if="fieldEntity['textOnBg']" class="text-bg"></rubedo-field>
         </div>
         <div class="col-sm-12 col-md-6">
-            <jwplayer ng-if="fieldEntity['video'] &&  contentDetailCtrl.content.fields.video.url" video-url="{{contentDetailCtrl.content.fields.video.url}}"></jwplayer>
+            <!-- <jwplayer ng-if="fieldEntity['video'] &&  contentDetailCtrl.content.fields.video.url" video-url="{{contentDetailCtrl.content.fields.video.url}}"></jwplayer> -->
+            <youtube ng-if="fieldEntity['video'] &&  contentDetailCtrl.content.fields.video.url" video="{{contentDetailCtrl.content.fields.video.url}}"></youtube>
             <rubedo-field field= "{{contentDetailCtrl.getFieldByName('image2')}}" ng-if="fieldEntity['image2']"></rubedo-field>
             <rubedo-field field= "{{contentDetailCtrl.getFieldByName('position')}}" ng-if="fieldEntity['position']"></rubedo-field>
         </div>
