--- a/theme/cana/templates/blocks/contentDetail/actualites.html
+++ b/theme/cana/templates/blocks/contentDetail/actualites.html
@@ -77,7 +77,8 @@
 		</div>
 		<div class="col-xs-12 " ng-if="fieldEntity['video']">
 			<div class="text-article">
-				<jwplayer video-url="{{fieldEntity['video']}}"></jwplayer>
+				<!-- <jwplayer video-url="{{fieldEntity['video']}}"></jwplayer> -->
+				<youtube video="{{fieldEntity['video']}}"></youtube>
 			</div>
 		</div>
 		<div class="col-xs-12">
