--- a/theme/cte/templates/blocks/contentList/home.html
+++ b/theme/cte/templates/blocks/contentList/home.html
@@ -42,10 +42,7 @@
                   </div>
                   <div class="col-sm-8">
                       <!-- <jwplayer video-url="{{content.fields.video}}"></jwplayer> -->
-                      <div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
-                            <iframe height="360" ng-src="{{get_youtube_embed_url(content.fields.video)}}" style="width:100%;height:100%;" width="640">
-                            </iframe>
-                        </div>
+                      <youtube video="{{content.fields.video}}"></youtube>
                   </div>
               </div>
               <a ng-if="!fieldEditMode&&contentListCtrl.isFOContributeMode" ng-href="{{ contentListCtrl.editorPageUrl+'?content-edit='+content.id }}" title="éditer un contenu" class="btn btn-default ng-binding ng-scope">
