--- a/theme/cte/templates/blocks/externalMedia.html
+++ b/theme/cte/templates/blocks/externalMedia.html
@@ -1,7 +1,4 @@
 <div ng-controller="ExternalMediaController as externalMediaCtrl" style="margin:0 auto; " ng-style="{'maxWidth':blockConfig.maxWidth}">
     <!-- <jwplayer video-url="{{externalMediaCtrl.config.url}}"></jwplayer> -->
-    <div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
-        <iframe height="360" ng-src="{{get_youtube_embed_url(externalMediaCtrl.config.url)}}" style="width:100%;height:100%;" width="640">
-        </iframe>
-    </div>
+    <youtube video="{{externalMediaCtrl.config.url}}"></youtube>
 </div>
