--- a/theme/cte/templates/blocks/searchResults/default.html
+++ b/theme/cte/templates/blocks/searchResults/default.html
@@ -88,10 +88,7 @@
                 </div>
                 <div class="col-sm-8">
                     <!-- <jwplayer video-url="{{content['fields.video'][0]}}"></jwplayer> -->
-                    <div class="youtube-embed-wrapper ng-scope" style="padding-bottom:56.25%;padding-top:30px;height:0;">
-                        <iframe height="360" ng-src="{{content['fields.video'][0]}}" style="width:100%;height:100%;" width="640">
-                        </iframe>
-                    </div>
+                    <youtube video="{{content['fields.video'][0]}}"></youtube>
                 </div>
            </div>
         </div>
