--- a/theme/jmj2016/templates/blocks/contentList.html
+++ b/theme/jmj2016/templates/blocks/contentList.html
@@ -59,7 +59,8 @@
         <div class="container padding-tb text-center" >
             <div class="col-xs-6 cursor-as-pointer" ng-class="contentListCtrl.columns" ng-repeat="columnContents in contentListCtrl.contentList track by $index" ng-init="columnIndex = $index" style="display:inline-block;float:none;" >
                 <div class="media text-center videos-list" ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" >
-                    <jwplayer video-url="{{content.fields.video.url}}"></jwplayer>
+                    <!-- <jwplayer video-url="{{content.fields.video.url}}"></jwplayer> -->
+                    <youtube video="{{content.fields.video.url}}"></youtube>
                     <h4>
                         <rubedo-field  field="{{content.type.title}}"></rubedo-field>
                     </h4>
