--- a/theme/netforgod/templates/blocks/carousel.html
+++ b/theme/netforgod/templates/blocks/carousel.html
@@ -16,8 +16,8 @@
     <div class="school-films">
         <div ng-repeat="content in carouselCtrl.contents track by $index" ng-if="content.fields.video" class="item-video">
             
-                <jwplayer video-url="{{content.fields.video.url}}"></jwplayer>
-    
+                <!-- <jwplayer video-url="{{content.fields.video.url}}"></jwplayer> -->
+                <youtube video="{{content.fields.video.url}}"></youtube>
         </div>
     </div>
 </div>
