--- a/theme/wtp17/templates/blocks/externalMedia.html
+++ b/theme/wtp17/templates/blocks/externalMedia.html
@@ -1,3 +1,4 @@
 <div ng-controller="ExternalMediaController as externalMediaCtrl" style="margin:0 auto; " ng-style="{'maxWidth':blockConfig.maxWidth}">
-    <jwplayer video-url="{{externalMediaCtrl.config.url}}" format="16:9"></jwplayer>
+    <!-- <jwplayer video-url="{{externalMediaCtrl.config.url}}" format="16:9"></jwplayer> -->
+    <youtube video="{{externalMediaCtrl.config.url}}"></youtube>
 </div>
