--- a/theme/cte/templates/blocks/contentDetail/proposition.html
+++ b/theme/cte/templates/blocks/contentDetail/proposition.html
@@ -160,8 +160,8 @@
 				<div class="col-sm-12" ng-if="fieldEditMode">
 					<p>{{contentDetailCtrl.getLabelByName('publics')}} :</p>
 					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('publics')}}"></rubedo-field>
-					<p>{{contentDetailCtrl.getLabelByName('public_service')}} :</p>
-					<rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('public_service')}}"></rubedo-field>
+					<p ng-if="!contentDetailCtrl.content.fields.public_service.includes('aucun')">{{contentDetailCtrl.getLabelByName('public_service')}} :</p>
+					<rubedo-field ng-if="!contentDetailCtrl.content.fields.public_service.includes('aucun')" field =  "{{contentDetailCtrl.getFieldByName('public_service')}}"></rubedo-field>
 				</div>
 				
 			</div>
