--- a/theme/cte/templates/blocks/contentDetail/projet.html
+++ b/theme/cte/templates/blocks/contentDetail/projet.html
@@ -69,7 +69,7 @@
 							<p class="capital text-left">{{contentDetailCtrl.getLabelByName('date_creation_projet')}}</p>
 						</div>
 						<div class="col-xs-12 col-sm-8 ">
-							<p class="small">{{contentDetailCtrl.content.fields.date_creation_projet | date:'MM yyyy'}}</p>
+							<p class="text-left">{{contentDetailCtrl.content.fields.date_creation_projet *1000 | date:'MMM yyyy'}}</p>
 
 						</div>
 					</div>
