fix bandeau projets finance 100%

--- a/theme/cte/templates/blocks/contentDetail/projet.html
+++ b/theme/cte/templates/blocks/contentDetail/projet.html
@@ -86,7 +86,7 @@
 					</div>
 
 					<!--Budget-->
-					<div class="container-fluid" ng-if="contentDetailCtrl.content.fields.budget>0">
+					<!-- <div class="container-fluid" ng-if="contentDetailCtrl.content.fields.budget>0">
 						<div class="col-xs-12 col-sm-4 border-top-red no-padding">
 							<p class="capital text-left">{{contentDetailCtrl.getLabelByName('budget')}}</p>
 						</div>
@@ -98,7 +98,7 @@
 							<em><a ng-href="{{'http://www.xe.com/ecc/input.cgi?Template=se&Amount='+contentDetailCtrl.content.fields.budget+'&From='+contentDetailCtrl.content.fields.monnaie }}" target="_blank" style="font-size: 0.95em;">Convertir dans une autre monnaie</a></em></p>
 							<p><rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('budget')}}"></rubedo-field></p>
 						</div>
-						</div>
+					</div> -->
 				</div>
 				<div class="col-xs-6">
 					<div class="container-fluid">
