add date in inscriptions list

--- a/theme/cte/templates/blocks/contentDetail/proposition.html
+++ b/theme/cte/templates/blocks/contentDetail/proposition.html
@@ -267,7 +267,7 @@
 			<table style="font-size:0.8em;">
 				<tr>
 					<th>Numéro</th>
-					<th>Date</th>
+					<th>Date Inscription</th>
 					<th>Statut</th>
 					<th>Serviteur?</th>
 					<th>Nom</th>
