add date in inscriptions list

--- a/theme/cte/templates/blocks/contentDetail/proposition.html
+++ b/theme/cte/templates/blocks/contentDetail/proposition.html
@@ -259,7 +259,7 @@
 	<div class="row" ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit && contentDetailCtrl.inscriptions">
 		<div class="text-article">
 			<div class="col-xs-12">
-				<h3>{{rubedo.translate("Inscriptions.Liste", "Liste des inscriptions")}} </h3>
+				<h3>{{rubedo.translate("Inscriptions.Liste", "Liste des inscriptions")}} ({{contentDetailCtrl.inscriptions.length}} inscrits)</h3>
 				<a ng-href="{{contentDetailCtrl.downloadUrl}}" download="inscriptions_{{fieldEntity['text']}}.csv" id="btnExport"  ><p><span class="glyphicon glyphicon-download-alt "></span> {{rubedo.translate("Inscriptions.Export", "Exporter en Excel")}}</p></a>
 			</div>
 		</div>
