--- a/theme/cte/templates/blocks/navigation.html
+++ b/theme/cte/templates/blocks/navigation.html
@@ -98,9 +98,9 @@
 
                             <li>
                                 <span style="line-height:1em">
-                                    <a ng-if="!blockConfig.donationPage" ng-href="http://www.chemin-neuf.fr/aidez-nous/faire-un-don?from={{encodeURIComponent('http://coco/riri')}}">{{rubedo.translate("FaireUnDon" , "Faire un don")}}</a>
-                                    <a ng-if="blockConfig.donationPage" rubedo-page-link="{{blockConfig.donationPage + '?from=' + encodeURIComponent('http://coco/riri')}}">{{rubedo.translate("FaireUnDon" , "Faire un don")}}</a>
-                                    </span>
+                                    <a ng-if="!blockConfig.donationPage" ng-href="http://www.chemin-neuf.fr/aidez-nous/faire-un-don?from={{encodeURIComponent($location.absUrl())}}">{{rubedo.translate("FaireUnDon" , "Faire un don")}}</a>
+                                    <a ng-if="blockConfig.donationPage" rubedo-page-link="{{blockConfig.donationPage}}">{{rubedo.translate("FaireUnDon" , "Faire un don")}}</a>
+                                </span>
                             </li>
             
                         </ul>
