add rgpd to projects partage solidarite

--- a/theme/cte/templates/blocks/donation.html
+++ b/theme/cte/templates/blocks/donation.html
@@ -284,7 +284,7 @@
                                 <div class="row text-center">
                                         <div class="col-xs-12">
                                                 <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-model='don.rgpd' required>
-                                                <label for="accept_rgpd">{{rubedo.translate("Block.Inscription.Jaccepte", "I accept")}} <a target="_blank" ng-href="/dam?media-id={{parameters.rgpd_media_id}}">{{rubedo.translate("Block.Inscription.PolitiqueRgpd", "the privacy policy of the Chemin Neuf community")}}</a></label>
+                                                <label for="accept_rgpd">{{rubedo.translate("Block.Inscription.Jaccepte", "I accept")}} <a style="text-decoration:underline" target="_blank" ng-href="/dam?media-id={{parameters.rgpd_media_id}}">{{rubedo.translate("Block.Inscription.PolitiqueRgpd", "the privacy policy of the Chemin Neuf community")}}</a></label>
                                         </div>
                                 </div>
 
