fix translation DE for rgpd checkbox

--- a/theme/bethanien/templates/blocks/inscription.html
+++ b/theme/bethanien/templates/blocks/inscription.html
@@ -141,7 +141,7 @@
             
             <!-- Checkbox accept RGPD -->
             <div class="row text-center">
-                <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-model='inscription.rgpd' required>
+                <input type="checkbox" name="accept_rgpd" id="accept_rgpd" ng-model="inscription.rgpd" required>
                 <label for="accept_rgpd">{{rubedo.translate("Block.Inscription.Jaccepte", "I accept")}} <a target="_blank" ng-href="/dam?media-id={{parameters.rgpd_media_id}}">{{rubedo.translate("Block.Inscription.PolitiqueRgpd", "the privacy policy of the Chemin Neuf community")}}</a></label>
             </div>
             
