--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -1456,9 +1456,9 @@ body .container-fluid#jeunes {.sans-serif;}
 /* Pretty printing styles. Used with prettify.js. */
 /* Vim sunburst theme by David Leibovic */
 
-pre .str, code .str { color: #65B042; } /* string  - green */
-pre .kwd, code .kwd { color: #E28964; } /* keyword - dark pink */
-pre .com, code .com { color: #AEAEAE; font-style: italic; } /* comment - gray */
+pre .str, code .str { color: hsla(18, 44%, 64%, 1); } /* string  - green #65B042; */
+pre .kwd, code .kwd { color: rgb(74, 153, 233); } /* keyword - dark pink #E28964; */
+pre .com, code .com { color: hsl(108, 65%, 32%); font-style: italic; } /* comment - gray #AEAEAE; */
 pre .typ, code .typ { color: #89bdff; } /* type - light blue */
 pre .lit, code .lit { color: #3387CC; } /* literal - blue */
 pre .pun, code .pun { color: #fff; } /* punctuation - white */
@@ -1470,11 +1470,12 @@ pre .dec, code .dec { color: #3387CC; } /* decimal - blue */
 
 pre.prettyprint, code.prettyprint {
 	background-color: #000;
-	border-radius: 8px;
+  border-radius: 0px;
+  border: none;
 }
 
 pre.prettyprint {
-	width: 95%;
+	width: 100%;
 	margin: 1em auto;
 	padding: 1em;
 	white-space: pre-wrap;
